# AoC2021Templates

./: .gitignore  CMakeLists.txt  print_helpers.hpp  readme.md
Day1/: solution.cpp
Day10/: CMakeLists.txt  solution.cpp
Day11/: solution.cpp
Day12/: solution.cpp
Day13/: solution.cpp  solutionSet.cpp
Day14/: solution.cpp
Day15/: solution.cpp  solution_part2.cpp
Day16/: solution.cpp
Day17/: solution.cpp
Day18/: solution.cpp
Day19/: solution.cpp
Day2/: solution.cpp  solutionEnum.cpp
Day20/: solution.cpp
Day21/: solution.cpp
Day22/: helpers.hpp  solution.cpp
Day3/: solution.cpp
Day4/: solution.cpp
Day5/: solution.cpp
Day6/: solution.cpp
Day7/: solution.cpp
Day8/: solution.cpp
Day9/: solution.cpp
cmake/: CompilerWarnings.cmake  Sanitisers.cmake
